# agente_traductor_video

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  main.py  pyproject.toml  traducir.ps1  web.py
.claude/: settings.json
.claude/skills/transcribe-only/: SKILL.md
.claude/skills/translate-video/: SKILL.md
pipeline/: __init__.py  merge.py  transcribe.py  translate.py  tts.py
static/: index.html
