[project]
name = "agente-traductor-video"
version = "0.1.0"
description = "Pipeline local de transcripción, traducción y doblaje de video"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "edge-tts>=7.2.8",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "kokoro-onnx>=0.5.0",
    "nvidia-cublas-cu12>=12.9.2.10",
    "nvidia-cuda-runtime-cu12>=12.9.79",
    "nvidia-cudnn-cu12>=9.22.0.52",
    "ollama>=0.6.2",
    "soundfile>=0.13.1",
    "srt>=3.5.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
